# Coronavirus_Twitter

./: LICENSE  README.md
Bot1/: bot.py  classe.py  main.py  pyproject.toml  raspagem.py  requirements.txt  scrapping.py  twitter_api.py
Bot2/: main.py  requirements.txt
