[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "coronavirus2"
version = "0.1.0"
[tool.poetry.dependencies]
bs4 = "^0.0.1"
python = "^3.7"
twitter = "^1.18"
tweepy = "^3.8"
threader = "^0.1.1"
twitterapi = "^2.5"
tqdm = "^4.45"
googletrans = "^2.4"
[tool.poetry.dev-dependencies]
